Change in content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<a href="#" class="instagram-logout">Remover Conta</a>
 				</div>
 				<div class="group">
-					<p class="not-account">Não é @henriquee</p>
+					<p class="not-account">Não é @henriiquuee</p>
 					<p class="not-account">
 						<span class="link-blue">Alternar contas</span>
 						ou
